# pollution_analysis_kurdistan

./: .flake8  .gitignore  .isort.cfg  Dockerfile  Makefile  README.md  README.rst  pyproject.toml  run.sh  setup.py
docs/: import_raw_data.md
notebooks/: Calculate_population_density.ipynb  Filtering_flaring_count.ipynb  Timeseries_flaring_analysis.ipynb  Visualising Flaring through time.ipynb
notebooks/plots/: iraq_kurdistan_russia_timeseries.html  iraq_kurdistan_timeseries.html
pollution_analysis/: main.py
pollution_analysis/config/: model_settings.py
pollution_analysis/src/: flaring_clusterer.py  flaring_descriptor.py  flaring_filter.py  flaring_grouper.py  flaring_loader.py  flaring_preprocess.py  flaring_scraper.py  satellite_loader.py
pollution_analysis/src/utils/: utils.py
scripts/: aggegrate_satellite_data.py  aggregate_methane_locations.py  calculate_total_population.py  convert_AOD_to_pm25.py  create_polygon_geojson_from_csv.py  filter_flares_by_region.py  filter_kurdistan_flaring_locations.py  generate_monthly_flarecount_by_flare_location.py  get_country_satellite_data.py  group_flaring_clusters.py  reassign_flaring_point_locations.py  temporally_aggregate_flare_count.py
tests/: test_pollution_analysis.py
