[tool.poetry]
name = "pollution_analysis"
version = "0.1.0"
description = ""
authors = ["ChristinaLast <christina.last@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
pandas = "^1.3.5"
geopandas = "^0.10.0"
open-geo-engine = {git = "https://github.com/AQ-AI/open-geo-engine.git", branch = "main"}
Shapely = "^1.8.1"
matplotlib = "^3.5.1"
plotly = "^5.6.0"
ipykernel = "^6.9.1"
nbformat = "^5.1.3"
joblib = "^1.1.0"
click-config-file = "^0.6.0"
click-option-group = "^0.5.3"
isort = "^5.10.1"
ipyevents = "^2.0.1"
ipyleaflet = "^0.16.0"
kaleido = "0.2.1"
click = "8.0.2"
google-auth = "^2.11.0"
pygeos = "^0.12.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
flake8 = "^4.0.1"
pycodestyle = "^2.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
