[tool.poetry]
name = "pollution_analysis_kurdistan"
version = "0.1.0"
description = ""
authors = ["ChristinaLast <christina.last@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10,<3.12"
pandas = "^2.0.3"
geopandas = ">=0.11.1,<0.12.0"
scikit-learn = "^1.3.0"
click = "^8.1.5"
earthengine-api = "^0.1.358"
open-geo-engine = "^0.1.3"
pydantic = "^2.0.2"
geopy = "^2.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
