[tool.poetry]
name = "pollution_analysis_kurdistan"
version = "0.1.0"
description = ""
authors = ["ChristinaLast <christina.last@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10,<3.12"
pandas = "^2.0.3"
geopandas = ">=0.11.1,<0.12.0"
open-geo-engine = "0.1.3"
Shapely = "^1.8.1"
matplotlib = "^3.5.1"
plotly = "^5.6.0"
ipykernel = "^6.9.1"
nbformat = "^5.1.3"
joblib = "^1.1.0"
click-config-file = "^0.6.0"
click-option-group = "^0.5.3"
isort = "^5.10.1"
ipyevents = "^2.0.1"
ipyleaflet = "0.17.1"
kaleido = "0.2.1"
click = "8.0.2"
google-auth = "^2.11.0"
pygeos = "^0.12.0"
setuptools = "65.3.0"
google-api-core = "^2.8.2"
google-cloud = "^0.34.0"
google-cloud-datastore = "^2.8.1"
google = "^3.0.0"
geemap = "^0.16.7"
pydantic = "^2.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
